// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package auth.service;

option go_package = "go.chromium.org/luci/auth_service/api/rpcpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Groups service contains methods to examine groups.
service Groups {
  // ListGroups returns all the groups currently stored in LUCI Auth service
  // datastore. The groups will be returned in alphabetical order based on their
  // ID.
  rpc ListGroups(google.protobuf.Empty) returns (ListGroupsResponse);

  // GetGroup returns information about an individual group, given the name.
  rpc GetGroup(GetGroupRequest) returns (AuthGroup);
}

// ListGroupsResponse is all the groups listed in LUCI Auth Service.
message ListGroupsResponse {
  // List of all groups.
  repeated AuthGroup groups = 1;
}

// GetGroupRequest is to specify an individual group.
message GetGroupRequest {
  string name = 1;  // e.g: "administrators"
}

// AuthGroup defines an individual group.
message AuthGroup {
  string name = 1;              // e.g: "auth-service-access"
  repeated string members = 2;  // e.g: ["user:t@example.com"]
  repeated string globs = 3;    // e.g: ["user:*@example.com"
  repeated string nested = 4;   // e.g: ["another-group-0", "another-group-1"]
  string description = 5;       // e.g: "This group is used for ..."
  string owners = 6;            // e.g: "administrators"
  google.protobuf.Timestamp created_ts = 7;  // e.g: "1972-01-01T10:00:20.021Z"
  string created_by = 8;                     // e.g: "user:test@example.com"
}
